objects/adapps__OptimizerPlus_Active_Sharing_Rules__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Feature_Type__c</fullName>
        <label>Feature Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Feature</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__High_Impact__c</fullName>
        <label>High Impact</label>
        <summaryFilterItems>
            <field>adapps__OptimizerPlus_Active_Sharing_Rule_Item__c.adapps__Status__c</field>
            <operation>equals</operation>
            <value>High Impact</value>
        </summaryFilterItems>
        <summaryForeignKey>adapps__OptimizerPlus_Active_Sharing_Rule_Item__c.adapps__Active_Sharing_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>adapps__Implementation_Effort__c</fullName>
        <label>Implementation Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Implementation_Effort</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Low_Impact__c</fullName>
        <label>Low Impact</label>
        <summaryFilterItems>
            <field>adapps__OptimizerPlus_Active_Sharing_Rule_Item__c.adapps__Status__c</field>
            <operation>equals</operation>
            <value>Low Impact</value>
        </summaryFilterItems>
        <summaryForeignKey>adapps__OptimizerPlus_Active_Sharing_Rule_Item__c.adapps__Active_Sharing_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>adapps__Medium_Impact__c</fullName>
        <label>Medium Impact</label>
        <summaryFilterItems>
            <field>adapps__OptimizerPlus_Active_Sharing_Rule_Item__c.adapps__Status__c</field>
            <operation>equals</operation>
            <value>Medium Impact</value>
        </summaryFilterItems>
        <summaryForeignKey>adapps__OptimizerPlus_Active_Sharing_Rule_Item__c.adapps__Active_Sharing_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>adapps__Optimizer_Report__c</fullName>
        <label>Optimizer Report</label>
        <referenceTo>adapps__Optimizer_Report__c</referenceTo>
        <relationshipLabel>Active Sharing Rules</relationshipLabel>
        <relationshipName>Active_Sharing_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Org_Item_Count__c</fullName>
        <label>Org Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Active Sharing Rule Limits</label>
    <nameField>
        <label>Active Sharing Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Sharing Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>